k8s/production/01-gotenberg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cilupbah-gotenberg
  namespace: cilupbah
spec:
  replicas: 2
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: cilupbah-gotenberg
  template:
    metadata:
      labels:
        app: cilupbah-gotenberg
    spec:
      terminationGracePeriodSeconds: 150
      containers:
        - name: gotenberg
          image: gotenberg/gotenberg:8-chromium
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1536Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: cilupbah-gotenberg
  namespace: cilupbah
spec:
  selector:
    app: cilupbah-gotenberg
  ports:
    - port: 3000
      targetPort: 3000
